@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5284 2004/03/20 19:47:17 minskim Exp $
+$NetBSD: CHANGES,v 1.5285 2004/03/20 23:18:09 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1500,3 +1500,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated tk-tclX to 8.2.0nb1 [minskim 2004-03-20]
 	Updated teixsl-html to 3.1nb1 [minskim 2004-03-20]
 	Updated teixsl-fo to 3.1nb1 [minskim 2004-03-20]
+	Updated swig to 1.1p5nb1 [minskim 2004-03-20]
